src/Styles/Cards.css
.cards-container {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: center;
  margin-top: 0rem;
}

.card {
  background-color: #201f35;
  border: 2px solid #f698bf;
  border-radius: 15px;
  width: 280px;
  padding: 1rem;
  text-decoration: none;
}

.card img {
  width: 100%;
  height: 160px;
  object-fit: cover;
  border-radius: 10px;
}

.card h2 {
  margin: 0.5rem 0;
  color: #f388b7;
  text-align: center;
}

.card p {
  text-align: center;
}

.card:hover {
  transform: translateY(-5px);
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
}

